trunk/Archive2/84/fccd45fe0a56a3/output
main.cpp:17:2: error: extra ‘;’ [-Wpedantic]
 };
  ^
main.cpp:19:14: warning: unused parameter ‘nArgs’ [-Wunused-parameter]
 int main(int nArgs, char *args[]) {
              ^
main.cpp:19:32: warning: unused parameter ‘args’ [-Wunused-parameter]
 int main(int nArgs, char *args[]) {
                                ^
main.cpp:23:2: error: extra ‘;’ [-Wpedantic]
 };
  ^
